# notes

./: .gitignore  README.md
code/: CMakeLists.txt  build.sh  consumer.py  file.txt  product.py  test.cpp  test.h  tools.h
code/c++/: CMakeLists.txt  run.sh
code/c++/src/: kafka.h  main.cpp  stack.h  thread_pool.h
code/golang/: README.md  build.sh  main.go
code/golang/common/logging/: logging.go
code/golang/internal/controller/: user_controller.go
code/golang/internal/entity/: user.go
code/golang/internal/repository/: user_repository.go
code/golang/internal/service/: user_service.go
code/golang/name_service/: main.go
code/golang/name_service/internal/controller/: user_controller.go
code/golang/name_service/internal/entity/: user.go
code/golang/name_service/internal/repository/: user_repository.go
code/golang/name_service/internal/service/: user_service.go
code/golang/score_service/: main.go
code/golang/score_service/internal/controller/: user_controller.go
code/golang/score_service/internal/entity/: user.go
code/golang/score_service/internal/repository/: user_repository.go
code/golang/score_service/internal/service/: user_service.go
code/python/: consumer.py  k_c.py  product.py
code_test/c++test/: CMakeLists.txt  run.sh  test.cpp
code_test/c++test/src/: ii.h  kafka.cpp  main.cpp  test.cpp
impl/: api.h  build.sh  main.cpp
language/c++/: README.md  some.cpp
language/c++/coroutine/: 0_coroutine-theory.md  0_coroutine_theory.md  1_operator-co-await.md  2_promise-type.md  3_symmetric_transfer.md  4_the-compiler-transform.md  main.cpp
language/c++/gcc/: 0_args.md
language/c++/some/: inline.md  some.cpp  static.md
language/c++/standard/: c++11.md  c++14.md  c++17.md  c++20.md  c++23.md
language/git/: git filter-branch.txt  git_amend.md  git_checkout.md  git_clone.md  git_filter-branch.md  git_log.txt  git_rebase.md  git_reset.md  git_reset.txt  git_restore.md  git_revert.md  git_stash.md  git_stash.txt
language/golang/: README.md
language/python/: convert_bytes_to_utf8.py
language/svn/: cmd.md
linux/: create_user.md
linux/bash/: lyk  lys  service_util
linux/command/: netstat.md  ss.md
middleware/consul/: README.md  api.md
middleware/msg_queue/kafka/: README.md
middleware/nginx/: nginx.txt
middleware/zookeeper/: install.md
read/: rsync_file.sh
read/0_微服务架构设计模式/: 2_服务拆分策略.md  3_微服务架构中的进程通讯.md  4_使用Saga管理事务.md  5_微服务架构中的业务逻辑设计.md
read/1_消息队列/0_RabbitMQ实战指南/: 2_RabbitMQ入门.md  4_RabbitMQ进阶.md
template/: main.cpp  some.hpp
thread_pool/: thread_pool.cpp  thread_pool.h
vscode_settings/project/: settings.json
vscode_settings/user/: settings.json
windows/: del_file.bat
